# Visualizer

./: CMakeLists.txt  README.md
shaders/: meshFragment.fs  meshVertex.vs
src/: main.cpp
